# fast-bc

./: .gitignore  CMakeLists.txt  README.md  carpaneto.txt  citta-studi.txt  directed.txt  graph.txt  main.cpp  map-to-graph.py  test  test1  zachary-karate
libfastbc/: CMakeLists.txt
libfastbc/include/: DirectedWeightedGraph.h  IDegreeGraph.h  IGraph.h  IGraphPartition.h  ISubGraph.h  SubGraph.h  fastbc.h  graph.h  louvain.h
libfastbc/include/brandes/: ClusteredBrandesBC.h  DijkstraClusterEvaluator.h  DijkstraSSBrandesBC.h  ExactBrandesBC.h  IBorderEvaluator.h  IBrandesBC.h  IClusterEvaluator.h  IPivotSelector.h  ISSBrandesBC.h  IVertexInfo.h  KMeansPivotSelector.h  VertexInfo.h  VertexInfoPivotSelector.h
libfastbc/include/kmeans/: IKMeans.h  PlusPlusKMeans.h
libfastbc/include/louvain/: Community.h  ICommunity.h  ILouvainEvaluator.h  LouvainEvaluator.h  LouvainGraph.h  LouvainGraphPartition.h  Partition.h
libfastbc/src/: graph.cpp
libfastbc/test/: CMakeLists.txt  DWGtext.txt  DirectedWeightedGraph.cpp  SubGraph.cpp
libfastbc/test/brandes/: CMakeLists.txt  DijkstraClusterEvaluator.cpp  DijkstraSSBrandesBC.cpp  ExactBrandesBC.cpp  VertexInfo.cpp  VertexInfoPivotSelector.cpp
